--- a/src/style.scss
+++ b/src/style.scss
@@ -1,7 +1,1 @@
-@use "./scss/reset";
-@use "./scss/scrollBtn";
-@use "./scss/slider";
-@use "./scss/progress";
-@use "./scss/darkmode";
-@use "./scss/switch";
-@use "./scss/touch";
+@use "./scss/archrive";
