--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -14,7 +14,7 @@ body {
     border-radius: 5px;
   }
   
-  .space-around {
+  .space__around {
     margin-top: 150px;
   }
   
@@ -24,33 +24,33 @@ body {
     color: #333;
   }
   
-  .toggle-container {
+  .toggle__container {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-top: 20px;
   }
   
-  .toggle-label {
+  .toggle__label { 
     flex-grow: 1;
     padding: 10px;
     font-size: 16px;
   }
   
-  .toggle-switch {
+  .toggle__switch {
     display: inline-block;
     position: relative;
     width: 60px;
     height: 34px;
   }
   
-  .toggle-switch input {
+  .toggle__switch input {
     opacity: 0;
     width: 0;
     height: 0;
   }
   
-  .toggle-slider {
+  .toggle__slider {
     position: absolute;
     cursor: pointer;
     top: 0;
@@ -62,7 +62,7 @@ body {
     transition: 0.4s;
   }
   
-  .toggle-slider:before {
+  .toggle__slider:before {
     position: absolute;
     content: "";
     height: 26px;
@@ -74,26 +74,26 @@ body {
     transition: 0.4s;
   }
   
-  input:checked + .toggle-slider {
+  input:checked + .toggle__slider {
     background-color: #2196f3;
   }
   
-  input:focus + .toggle-slider {
+  input:focus + .toggle__slider {
     box-shadow: 0 0 1px rgb(33, 201, 243);
   }
   
-  input:checked + .toggle-slider:before {
+  input:checked + .toggle__slider:before {
     transform: translateX(26px);
   }
   
-  .dark-mode-container {
+  .dark__mode__container {
     display: flex;
     align-items: center;
     justify-content: center;
     margin-top: 80px;
   }
   
-  .dark-mode-button {
+  .dark__mode__button {
     padding: 8px 16px;
     font-size: 18px;
     background-color: transparent;
@@ -103,7 +103,7 @@ body {
     cursor: pointer;
   }
   
-  .fake-version {
+  .fake__version {
     text-align: center;
     margin-top: 20px;
     color: #888;
