--- a/src/scss/_wrapper.scss
+++ b/src/scss/_wrapper.scss
@@ -2,3 +2,9 @@
     background-color: #fff;
 width: 100%;
 }
+#wrapper {
+    margin: 0 auto;
+    background-color: #fff;
+    max-width: 360px;
+    border: solid 2px red;
+  }
