--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,16 @@
-@use "./scss/archrive";
+@use "./scss/inbox";
 @use "./scss/wrapper";
 @use "./scss/settings";
+@use "./scss/header";
+
+
+html,
+body {
+  scroll-behavior: smooth;
+  font-family: "Roboto", sans-serif;
+  overflow-x: hidden;
+}
+
+img {
+  display: block;
+}
